[package]
name = "style-decoder"
version = "0.1.0"
edition = "2024"
description = "Reverse-engineer any article's writing style into a reusable System Prompt"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
dialoguer = "0.11"

[profile.release]
strip = true
lto = true
